--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -43,7 +43,8 @@
     </qresource>
     <qresource prefix="/images">
         <file alias="splash">images/splash.png</file>
-        <file alias="cryptonote">images/ipbc.png</file>
+        <file alias="cryptonote">images/wallet-white.png</file>
+        <file alias="window">images/wallet.png</file>
         <file alias="coin">images/ipbccoin.png</file>
         <file alias="clock">images/clock.gif</file>
         <file alias="bg.png">images/bg.png</file>
