--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -47,7 +47,7 @@
   <qresource prefix="/images">
     <file alias="splash">images/splash.png</file>
     <file alias="cryptonote">images/wallet.png</file>
-    <file alias="coin">images/ipbccoin.png</file>
+    <file alias="coin">images/bittubecoin.png</file>
     <file alias="clock">images/clock.gif</file>
     <file alias="bg.png">images/bg.png</file>
     <file alias="handle.png">images/handle.png</file>
