--- a/src/gui/ui/confirmsenddialog.ui
+++ b/src/gui/ui/confirmsenddialog.ui
@@ -76,7 +76,7 @@
        </property>
        <property name="icon">
         <iconset resource="../../resources.qrc">
-         <normaloff>:/icons/transaction</normaloff>:/icons/transaction</iconset>
+         <normaloff>:/icons/send_confirm</normaloff>:/icons/send_confirm</iconset>
        </property>
       </widget>
      </item>
